2nd Mermaid implementation attemp: fix theme issues

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -16,14 +16,12 @@
     {%- include footer.html -%}
 
     <script type="text/javascript"
-      src="https://unpkg.com/mermaid@11.3.0/dist/mermaid.min.js">
-    </script>
+      src="https://unpkg.com/mermaid@11.3.0/dist/mermaid.min.js"></script>
     <script>
-      $(document).ready(function() {
-          mermaid.initialize({
-              theme: 'dark'
-          });
-      });
+        mermaid.initialize({
+          startOnLoad:true,
+          theme: "dark"
+        });
     </script>
   </body>
 
