--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -15,8 +15,7 @@
 
     {%- include footer.html -%}
 
-    <script type="text/javascript"
-      src="https://unpkg.com/mermaid@11.3.0/dist/mermaid.min.js"></script>
+    <script src="https://unpkg.com/mermaid@11.3.0/dist/mermaid.min.js"></script>
     <script>
         mermaid.initialize({
           startOnLoad:true,
