--- a/index.css
+++ b/index.css
@@ -1,5 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 
+head,
+body {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: "Crimson Pro";
+}
+
+div#section_links {
+    padding: 5px;
+
+    background-color: chartreuse;
+}
+
+div#section_links>* {
+    color: brown;
+}
+
+div#section_links>*:hover {
+    color: cadetblue;
 }
