--- a/index.css
+++ b/index.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 
+html,
+body {
+    height: 100%;
+}
+
 head,
 body {
     margin: 0;
@@ -10,16 +15,39 @@ body {
     font-family: "Crimson Pro";
 }
 
-div#section_links {
+#contents {
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+}
+
+#content {
+    height: 100%;
+
+    flex-grow: 6;
+}
+
+#section_links {
     padding: 5px;
 
     background-color: chartreuse;
+
+    flex-grow: 1;
+
+    display: flex;
+    flex-direction: row;
 }
 
-div#section_links>* {
+.section {
+    padding: 5px;
+
     color: brown;
 }
 
-div#section_links>*:hover {
-    color: cadetblue;
+.section:hover {
+    cursor: pointer;
+
+    color: rgb(203, 161, 221);
+    background-color: rgb(76, 30, 95);
 }
